# tauri-plugin-bsnapmap

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
examples/tauri-app/: index.html  package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte  main.js  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_lparam_mouse_position.toml  get_mapped_mouse_position.toml  get_win32_mouse_position.toml  is_over_maximize_button.toml  set_maximize_button_rect.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
