[package]
name = "tauri-plugin-bsnapmap"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-bsnapmap"

[dependencies]
tauri = { version = "2.2.1" }
serde = "1.0"
thiserror = "2"
windows = { version = "0.52.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls"
]}
once_cell = "1.19"
anyhow = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
